# ContextForge

./: .env.example  .gitignore  AGENT.md  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  settings.py
.agents/docs/init_proyect/: design.md  (+1 more)
.agents/prompts/: role.md
.agents/rules/: builders.md  cache.md  controllers.md  domain_layer.md  factories.md  providers.md
.agents/templates/: commit_template.md  plan_template.md  pr_template.md  session-template.md
.agents/workflows/: execute_workflow.md  finalize_workflow.md  init_workflow.md  plan_workflow.md  task_source_workflow.md
.kiro/skills/: class_format.md  controllers.md
app/: session.py
app/controllers/: application_controller.py  health_controller.py  mcp_controller.py
app/exceptions/: exception_handler.py
app/handlers/: tool_call.py
app/schemas/: __init__.py  errors.py  mcp_request.py  mcp_response.py  serialize.py  tools.py
config/: routes.py
docs/init_proyect/: design.md
skills/: builders.md  cache.md  class_format.md  domain_layer.md  factories.md  llm.md  providers.md
skills/application_layer/: SKILL.md
skills/domain_layer/: SKILL.md
skills/infrastructure_layer/: SKILL.md
skills/interface_layer/: SKILL.md
skills/patterns_architecture/: SKILL.md
skills/rules_develop/: class_format.md  controllers.md  llm.md
src/domain/: entities.py  exceptions.py  interfaces.py
tests/infrastructure/: test_resolver_youtrack.py
tests/property/: test_llm_engine.py  test_properties_cache.py  test_properties_chunks.py  test_properties_providers.py  test_properties_validation.py
tests/unit/: test_chroma_cache.py  test_context_service.py  test_read_full_usecase.py  test_tokenizer.py
(+72 files in other folders)
