[project]
name = "contextforge"
version = "0.1.0"
description = "MCP Server for optimizing AI context consumption"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic-settings",
    "chromadb",
    "langchain",
    "langchain-google-genai",
    "langchain-core",
    "requests",
    "hypothesis",
    "pytest",
    "pytest-asyncio",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
exclude = [".venv", "__pycache__", "build", "dist"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
